<resources>
    <string name="app_name">Project Dashboard</string>

    <string name="nav_projects">Projects</string>
    <string name="nav_teams">Teams</string>
    <string name="nav_profile">Profile</string>

    <string name="tab_tasks_open">Open Tasks</string>
    <string name="tab_tasks_finished">Finished Tasks</string>

    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_add_project">Create Project</string>
    <string name="action_task_done">Finished</string>
    <string name="action_signout">Sign Out</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_company">Company</string>
    <string name="hint_optional">optional</string>
    <string name="hint_project_name">Project Name</string>
    <string name="hint_project_team">Assigned Team</string>
    <string name="hint_project_owner">Project Owner</string>
    <string name="hint_project_contact">Project Contactperson</string>

    <string name="desc_img_logo">Project Dashboard logo</string>
    <string name="desc_remove_picture">Remove Picture</string>
    <string name="desc_no_content">No Content</string>

    <string name="header_add_project">Create a project</string>

    <string name="label_members">%s Member(s)</string>
    <string name="label_projects">Projects</string>
    <string name="label_teams">Teams</string>

    <!-- VALIDATION ERROR -->
    <string name="error_empty">This field is required</string>
    <string name="error_invalid_email">Enter a valid email</string>
    <string name="error_invalid_phonenr">Enter a valid phone number</string>
    <string name="error_invalid_password">A password is at least 6 characters long</string>
    <string name="error_invalid_passwordConfirm">The entered passwords do not match</string>

    <string name="error_login_failed">Failed to login, email and password do not match</string>
    <string name="error_registration_failed">Failed to register, check your details</string>
    <string name="error_projectname_exists">A project with this name already exists</string>

    <!-- GENERIC HTTP ERROR -->
    <string name="httperror_nonetwork">No network… Try connecting first</string>
    <string name="httperror_invalid_data">Failed to send data, check your details</string>
    <string name="httperror_400">Something went wrong while sending data</string>
    <string name="httperror_401">You are not authorized to do this</string>
    <string name="httperror_404">The requested data was not found</string>
    <string name="httperror_504">The server didn\'t respond in time, try again…</string>
</resources>
